# agentic-call-transcript

./: .env  README.md  pipeline_output_log.txt  requirements.txt  run.py
Input/: Call_Transcript_Data.csv  Customer_Data.csv
deployment/: Dockerfile
output/CUST_102/: call_transcript.json  churn_risk.json  customer_profile.json  retention_recommender.json  rootcause.json  sentiment.json
output/CUST_105/: call_transcript.json  churn_risk.json  customer_profile.json  retention_recommender.json  rootcause.json  sentiment.json
src/: app.py  main.py
src/agents/: churn_prediction.py  customer_profile_summarizer.py  retention_recommender.py  root_cause_analysis.py  sentiment.py
src/config/: agents.yaml  tasks_churn_risk.yaml  tasks_customer_profile.yaml  tasks_retention_recommender.yaml  tasks_rootcause.yaml  tasks_sentiment.yaml
src/customer_profile/: README.md  pyproject.toml
src/customer_profile/src/customer_profile/: main.py
src/customer_profile/src/customer_profile/crews/customer_profile_crew/: customer_profile_crew.py
src/customer_profile/src/customer_profile/crews/customer_profile_crew/config/: agents.yaml  tasks.yaml
src/customer_profile/src/customer_profile/tools/: custom_tool.py
