[project]
name = "customer_profile"
version = "0.1.0"
description = "customer_profile using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
]

[project.scripts]
kickoff = "customer_profile.main:kickoff"
plot = "customer_profile.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
